add ncss and misc updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,13 @@ export(daymet_raster)
 export(daymet_station_uri)
 export(fetch_daymet_raster)
 export(get_crs)
+export(get_res)
+export(ncss_base_url)
+export(ncss_basename)
+export(ncss_download)
+export(ncss_query_misc)
+export(ncss_root_url)
+export(ncss_url)
 export(param_from_uri_grid)
 export(param_from_uri_station)
 export(points_transform)
