new URI and basename architeture for v4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(daymet_index)
 export(daymet_nav)
 export(daymet_raster)
 export(daymet_station_uri)
+export(daymet_version)
 export(fetch_daymet_raster)
 export(get_crs)
 export(get_res)
@@ -15,6 +16,7 @@ export(ncss_base_url)
 export(ncss_basename)
 export(ncss_download)
 export(ncss_query_misc)
+export(ncss_read_brick)
 export(ncss_root_url)
 export(ncss_url)
 export(param_from_uri_grid)
